<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android ="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginmodel"
            type="iot.empiaurhouse.papyruz.viewmodel.SignInViewModel"/>


    </data>





<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signin_activity"
    tools:context=".view.SignInActivity"
    android:focusableInTouchMode="true"
    android:orientation="vertical">



    <TextView

        android:id="@+id/SignInTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:paddingTop="1dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/kaushanscriptregular"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="29sp"
        android:visibility="visible"

        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"/>



    <ImageView
        android:scaleType="fitCenter"
        android:layout_marginTop="-3dp"
        android:id="@+id/papyruz_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/sphinxclip"
        android:visibility="visible"
        android:contentDescription="@string/papyruz_logo"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserratlight"
        android:text="@string/SignIn_Title"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:visibility="visible"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"


        />



    <EditText

        android:layout_marginTop="5dp"
        android:id="@+id/SignIn_Fullname"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="3"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/montserratthin"
        android:hint="@string/name_placeholder"
        android:inputType="textPersonName"
        android:text="@={loginmodel.login.name}"
        app:error="@{loginmodel.login.nameError}"
        app:onFocus="@{loginmodel.getNameOnFocusChangeListener()}"
        android:maxLength="9"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp" />



    <EditText
        android:id="@+id/SignIn_Email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="3"
        android:textSize="26sp"
        android:inputType="textNoSuggestions|textEmailAddress"
        android:fontFamily="@font/montserratthin"
        android:hint="@string/email_placeholder"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="15dp"
        android:text="@={loginmodel.login.email}"
        app:error="@{loginmodel.login.emailError}"
        app:onFocus="@{loginmodel.getEmailOnFocusChangeListener()}"
        />


    <Button
        android:id="@+id/continue_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserratsemibold"
        android:padding="2dp"
        android:text="@string/Continue_Button"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"

        />






</LinearLayout>

</layout>