<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iot.empiaurhouse.papyruz.view.LoaderActivity"
    android:id="@+id/loader_fragment_activity"
    android:paddingBottom="44dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">








    <ImageView
        android:layout_marginTop="105dp"
        android:id="@+id/papyruz_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/papyrus_app_icon"
        android:visibility="visible"
        android:contentDescription="@string/papyruz_logo"
        />


    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="-10dp"
        android:textAllCaps="false"
        android:id="@+id/app_title_text"
        android:fontFamily="@font/kaushanscriptregular"
        android:text="@string/app_name"
        android:textSize="53sp"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:id="@+id/greeter_text"
        android:fontFamily="@font/montserratlight"
        android:text="@string/Greeting1"
        android:textSize="29sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />








</LinearLayout>